--- a/INSTALL.en
+++ b/INSTALL.en
@@ -3,43 +3,48 @@
 ###  Directory formation of source which was installed pg_stats_reporter   ###
 pg_stats_reporter
    |
+   +- bin/ ...................... script which run on command line
+   |
    +- html/
    |    |
-   |    +- pg_stats_reporter/
+   |    +- pg_stats_reporter/ ... script which run via HTTP server
    |          |
-   |          +- package/ ... jQuery etc
+   |          +- package/ ....... jQuery etc
    |          |
-   |          +- js/ ........ Javascripts for pg_stats_reporter
+   |          +- js/ ............ Javascripts for pg_stats_reporter
    |          |
-   |          +- css/ ....... CSS for pg_stats_reporter
+   |          +- css/ ........... CSS for pg_stats_reporter
    |          |
-   |          +- doc/ ....... manual of pg_stats_reporter
+   |          +- doc/ ........... manual of pg_stats_reporter
    |
-   +- pg_stats_reporter/ .... configure files directory
+   +- pg_stats_reporter_lib/ .... configure files directory
         |
-        +- lib/ ............. php modules of pg_stats_reporter
+        +- module/ .............. php modules of pg_stats_reporter
         |
-        +- template/ ........ template files
+        +- template/ ............ template files
         |
-        +- cache/ ........... configure file and cache files of Smarty
+        +- cache/ ............... configure file and cache files of Smarty
         |
-        +- compiled/ ........ compiled files and template files of Smarty
+        +- compiled/ ............ compiled files and template files of Smarty
         |
-        +- message/ ......... language files
+        +- message/ ............. language files
 
 
 ###  How to install pg_stats_reporter?  ###
 
-First, please copy source files to http server's directory.
-And, you should set cache and compiled directory's permission which can be created file by http server's user.
+First, please copy source files to http server's directory. Also, you copy
+script for command line to /usr/local/bin. And, you should set cache and
+compiled directory's permission which can be created file by http server's
+user.
 
 This setting example is under following.
 
 $ su
-# tar xvfz pg_stats_reporter-1.0.0.tar.gz
+# tar xvfz pg_stats_reporter-2.0.0.tar.gz
 # cp -R pg_stats_reporter/html/pg_stats_reporter /var/www/html
-# cp -R pg_stats_reporter/pg_stats_reporter /var/www
-# cd /var/www/pg_stats_reporter
+# cp -R pg_stats_reporter/pg_stats_reporter_lib /var/www
+# cp pg_stats_reporter/bin/pg_stats_reporter /usr/local/bin
+# cd /var/www/pg_stats_reporter_lib
 # chown apache.apache cache compiled
 
 
@@ -49,8 +54,9 @@ There is sample file in pg_stats_reporter package.
 So you set configure in sample file for your environment.
 Setting example is under following.
 
-# cd /var/www/pg_stats_reporter
-# cp pg_stats_reporter.ini.sample pg_stats_reporter.ini
+# cd /var/www/pg_stats_reporter_lib
+# cp pg_stats_reporter.ini.sample /etc/pg_stats_reporter.ini
+# cd /etc
 # vi pg_stats_reporter.ini
 
 ----- Set your repository database -----
@@ -65,9 +71,13 @@ Repository database is pg_statsinfo's database.
 ###  How to uninstall? ###
 Please delete directory/files of pg_stats_reporter.
 How to delete method's example is under following.
-If you want to not delete configure file, you copy pg_stats_reporter.ini to other location before delete directory.
+If you want to keep configure file, do not delete /etc/pg_stats_reporter.ini.
 
 $ su
 # cd /var/www
 # rm -r html/pg_stats_reporter
-# rm -r pg_stats_reporter
+# rm -r pg_stats_reporter_lib
+# cd /usr/local/bin
+# rm pg_stats_reporter
+# cd /etc
+# rm pg_stats_reporter.ini
