・pg_stats_reporterの変更履歴ファイルに、"2.0.0"での変更点を追記 ・pg_stats_reporterのSPECファイルの"2.0.0"のリリース日時を変更

--- a/history.ja
+++ b/history.ja
@@ -1,3 +1,16 @@
+[2.0.0 (2013/08/09)]
+・ コマンドライン機能を追加
+・ チェックポイント実行期間をグラフ上にハイライト表示する機能を追加
+・ GUC設定レポートの単位情報列を非ソート対象に変更
+・ GUC設定レポートのヘルプ表示に単位情報列の説明を追加
+・ グラフを拡大または縮小するときの動作がアニメーションになるように修正
+・ Query Activity(Statements)のtime/callのカラム名とヘルプ表示の単位を修正 (ms -> sec)
+・ 設定ファイルの配置場所を変更
+・ パッケージのディレクトリ構成を変更
+・ 各種ライブラリをバージョンアップ
+・ キャッシュファイルの書込みと読込みが競合する問題を修正
+・ エラーが発生した場合に無効な設定ファイルのキャッシュファイルが残らないように修正
+
 [1.0.1 (2013/02/01)]
 ・ レフトメニューのアコーディオン内の文字列が折りかえるように修正
 ・ スタンバイが複数ある場合にReplication Activityの表が崩れるのを修正
