変更履歴ファイル(history.ja)の"2.0.0"での変更点に以下の項目を追加  - php-intlパッケージが未インストールの状態でも動作するように修正

--- a/history.ja
+++ b/history.ja
@@ -8,6 +8,7 @@
 ・ 設定ファイルの配置場所を変更
 ・ パッケージのディレクトリ構成を変更
 ・ 各種ライブラリをバージョンアップ
+・ php-intlパッケージが未インストールの状態でも動作するように修正
 ・ キャッシュファイルの書込みと読込みが競合する問題を修正
 ・ エラーが発生した場合に無効な設定ファイルのキャッシュファイルが残らないように修正
 
