・pg_stats_reporterの変更履歴ファイルに、"3.0.0"での変更点を追記 ・pg_stats_reporterのSPECファイルを"3.0.0"向けの内容に変更

--- a/history.ja
+++ b/history.ja
@@ -1,3 +1,20 @@
+[3.0.0 (2014/07/24)]
+・データベースのログをレポートする機能を追加
+・性能レポート項目にアラート情報を追加
+・性能レポート項目にAutoanalyzeの情報を追加
+・性能レポート項目にAutovacuumのキャンセルの情報を追加
+・性能レポート項目"Schema Information(Table)"から行サイズのカラムを削除
+・性能レポート項目"Schema Information(Table)"に行数のカラムを追加 (pg_statsinfo 3.0以降)
+・ヘッダメニュおよびレポート本体の大分類の項目名を変更
+・Create new reportダイアログのデフォルトの日時設定を変更
+・性能レポートにエンドマーカを追加
+・エラーダイアログにOKボタンを追加
+・設定ファイルのキャッシュを廃止
+・PHP 5.5向けの不具合を修正
+・設定ファイルのリポジトリ名を変更後に設定リロードを行うとエラーになる問題を修正
+・一部のロケールで正しく動作しない問題を修正
+・ダイアログ表示時にフォーカスがダイアログに移らない不具合を修正
+
 [2.0.0 (2013/10/25)]
 ・ コマンドライン機能を追加
 ・ チェックポイント実行期間をグラフ上にハイライト表示する機能を追加
