historyに3.1の情報を追加

--- a/history.ja
+++ b/history.ja
@@ -1,3 +1,17 @@
+[3.1.0 (2015/06/10)]
+
+・レポート項目にクエリ実行計画の情報を追加
+・レポート項目にAutoanalyzeのキャンセルの情報を追加
+・レポート項目にAutovacuumの未回収タプルの情報を追加
+・レポート項目に最後のAnalyze以降に変更されたタプル数の情報を追加
+・レポート項目にWALアーカイブに関する情報を追加
+・レポート項目にディスクI/Oの秒当たりの読み込み量のピーク値を追加
+・レポート項目にディスクI/Oの秒当たりの書き込み量のピーク値を追加
+・レポート項目にディスクI/Oの秒当たりの読み込み/書き込み量のピーク値のグラフを追加
+・レポート項目のタイトルを変更
+・I/O Usageのグラフを表示/非表示切り替え用リンクを追加
+・クエリ全文表示ボタンを設置
+
 [3.0.0 (2014/07/24)]
 ・データベースのログをレポートする機能を追加
 ・性能レポート項目にアラート情報を追加
