プログラムのバージョンを"3.2.0"に変更

--- a/history.ja
+++ b/history.ja
@@ -1,5 +1,7 @@
-[3.1.0 (2015/06/10)]
+[3.2.0 (2015/XX/XX)]
+・ヘルプ表示のtypoを修正
 
+[3.1.0 (2015/06/10)]
 ・レポート項目にクエリ実行計画の情報を追加
 ・レポート項目にAutoanalyzeのキャンセルの情報を追加
 ・レポート項目にAutovacuumの未回収タプルの情報を追加
