日本語版historyファイルの更新と英語版の追加

--- a/history.ja
+++ b/history.ja
@@ -1,36 +1,52 @@
+[3.3.0 (2017/06/22)]
+・ pg_statsinfo 3.3に対応
+・ レポート項目にバックグラウンドライタの活動情報を追加
+・ Replication Overviewにreplay delayの最大と平均を 追加
+・ 複数の同期レプリケーション先があるときに、Replication Delaysを正しく表示するように修正
+・ 未対応バージョンのリポジトリDBを使用した場合に正しく拒否するように修正
+・ Dygraphsの非推奨パラメータを使用していた部分の修正
+
+[3.2.2 (2017/01/25)]
+・ 表示する内容に"<idle> in transaction"が含まれる場合の表示の不具合を修正
+・ WAL Write Rateのグラフにて、折れ線が描画エリアに収まるように軸のスケールを修正
+・ 日本語版、英語版マニュアルの修正
+
+[3.2.1 (2016/02/18)]
+・ 日本語版、英語版マニュアルの修正
+
 [3.2.0 (2015/11/18)]
-・pg_statsinfo 3.2に対応
-・ヘルプ表示のtypoを修正
+・ pg_statsinfo 3.2に対応
+・ ヘルプ表示のtypoを修正
 
 [3.1.0 (2015/06/10)]
-・レポート項目にクエリ実行計画の情報を追加
-・レポート項目にAutoanalyzeのキャンセルの情報を追加
-・レポート項目にAutovacuumの未回収タプルの情報を追加
-・レポート項目に最後のAnalyze以降に変更されたタプル数の情報を追加
-・レポート項目にWALアーカイブに関する情報を追加
-・レポート項目にディスクI/Oの秒当たりの読み込み量のピーク値を追加
-・レポート項目にディスクI/Oの秒当たりの書き込み量のピーク値を追加
-・レポート項目にディスクI/Oの秒当たりの読み込み/書き込み量のピーク値のグラフを追加
-・レポート項目のタイトルを変更
-・I/O Usageのグラフを表示/非表示切り替え用リンクを追加
-・クエリ全文表示ボタンを設置
+・ レポート項目にクエリ実行計画の情報を追加
+・ レポート項目にAutoanalyzeのキャンセルの情報を追加
+・ レポート項目にAutovacuumの未回収タプルの情報を追加
+・ レポート項目に最後のAnalyze以降に変更されたタプル数の情報を追加
+・ レポート項目にWALアーカイブに関する情報を追加
+・ レポート項目にディスクI/Oの秒当たりの読み込み量のピーク値を追加
+・ レポート項目にディスクI/Oの秒当たりの書き込み量のピーク値を追加
+・ レポート項目にディスクI/Oの秒当たりの読み込み/書き込み量のピーク値のグラフを追加
+・ レポート項目のタイトルを変更
+・ I/O Usageのグラフを表示/非表示切り替え用リンクを追加
+・ クエリ全文表示ボタンを設置
 
 [3.0.0 (2014/07/24)]
-・データベースのログをレポートする機能を追加
-・性能レポート項目にアラート情報を追加
-・性能レポート項目にAutoanalyzeの情報を追加
-・性能レポート項目にAutovacuumのキャンセルの情報を追加
-・性能レポート項目"Schema Information(Table)"から行サイズのカラムを削除
-・性能レポート項目"Schema Information(Table)"に行数のカラムを追加 (pg_statsinfo 3.0以降)
-・ヘッダメニュおよびレポート本体の大分類の項目名を変更
-・Create new reportダイアログのデフォルトの日時設定を変更
-・性能レポートにエンドマーカを追加
-・エラーダイアログにOKボタンを追加
-・設定ファイルのキャッシュを廃止
-・PHP 5.5向けの不具合を修正
-・設定ファイルのリポジトリ名を変更後に設定リロードを行うとエラーになる問題を修正
-・一部のロケールで正しく動作しない問題を修正
-・ダイアログ表示時にフォーカスがダイアログに移らない不具合を修正
+・ データベースのログをレポートする機能を追加
+・ 性能レポート項目にアラート情報を追加
+・ 性能レポート項目にAutoanalyzeの情報を追加
+・ 性能レポート項目にAutovacuumのキャンセルの情報を追加
+・ 性能レポート項目"Schema Information(Table)"から行サイズのカラムを削除
+・ 性能レポート項目"Schema Information(Table)"に行数のカラムを追加 (pg_statsinfo 3.0以降)
+・ ヘッダメニュおよびレポート本体の大分類の項目名を変更
+・ Create new reportダイアログのデフォルトの日時設定を変更
+・ 性能レポートにエンドマーカを追加
+・ エラーダイアログにOKボタンを追加
+・ 設定ファイルのキャッシュを廃止
+・ PHP 5.5向けの不具合を修正
+・ 設定ファイルのリポジトリ名を変更後に設定リロードを行うとエラーになる問題を修正
+・ 一部のロケールで正しく動作しない問題を修正
+・ ダイアログ表示時にフォーカスがダイアログに移らない不具合を修正
 
 [2.0.0 (2013/10/25)]
 ・ コマンドライン機能を追加
