--- a/history.ja
+++ b/history.ja
@@ -1,3 +1,16 @@
+[10.0 (2018/01/25)]
+・ Replication Overview、Delaysの表示を、レポート期間内に接続のあった全てのスタンバイの
+   情報を表示するように修正
+・ ステートメント情報のクエリ全文表示ダイアログにおいて, 表示される内容が改行を含む場合に
+   フォントサイズが小さくなる問題を修正
+・ Replication Overviewにレプリケーション遅延時間を追加
+・ 本バージョンからpg_stats_reporterはpg_statsinfoの複数バージョンサポートを廃止。
+   pg_stats_repoter 10はpg_statsinfo 10のみに対応
+
+[3.3.1 (2017/09/12)]
+・ 全文表示ダイアログに表示される内容が改行を含む場合にフォントサイズが小さくなる問題を修正
+・ 1つのクエリに複数の実行計画が表示される場合に、一部の表が正常に表示されない問題を修正
+
 [3.3.0 (2017/06/22)]
 ・ pg_statsinfo 3.3に対応
 ・ レポート項目にバックグラウンドライタの活動情報を追加
