--- a/history.en
+++ b/history.en
@@ -1,3 +1,6 @@
+[11.0 (2018/10/23)]
+* Supports pg_statsinfo 11 (pg_stats_reporter 11 supports only pg_statsinfo 11).
+
 [10.0 (2018/01/25)]
 * Now Replication Overview and Delays show all standbys that had
   a connection time during a reporting period.
