--- a/history.ja
+++ b/history.ja
@@ -1,3 +1,6 @@
+[11.0 (2018/10/23)]
+・ pg_statsinfo 11に対応した。(pg_stats_reporter 11は pg_statsinfo 11のみをサポートする)
+
 [10.0 (2018/01/25)]
 ・ Replication Overview、Delaysの表示を、レポート期間内に接続のあった全てのスタンバイの
    情報を表示するように修正
