--- a/history.en
+++ b/history.en
@@ -1,3 +1,6 @@
+[12.0 (2019/11/08)]
+* Supports pg_statsinfo 12 (pg_stats_reporter 12 supports only pg_statsinfo 12).
+
 [11.0 (2019/01/22)]
 * Supports pg_statsinfo 11 (pg_stats_reporter 11 supports only pg_statsinfo 11).
 
