--- a/history.ja
+++ b/history.ja
@@ -1,3 +1,6 @@
+[12.0 (2019/11/08)]
+・ pg_statsinfo 12に対応した。(pg_stats_reporter 12は pg_statsinfo 12のみをサポートする)
+
 [11.0 (2019/01/22)]
 ・ pg_statsinfo 11に対応した。(pg_stats_reporter 11は pg_statsinfo 11のみをサポートする)
 
